# ShaderLoom-Editor

./: .gitignore  CMakeLists.txt  README.md
docs/: LAYOUT_REFERENCE.md  MILESTONES.md
src/ShaderLoom/: Image.cpp  Image.hpp  Processing.cpp  Processing.hpp
src/ShaderLoom/effects/: AsciiEffect.cpp  AsciiEffect.hpp  DitherEffect.cpp  DitherEffect.hpp  PixelSortEffect.cpp  PixelSortEffect.hpp
src/ShaderLoom/render/: EffectModule.hpp
src/app/: main.cpp
src/app/render/: GLPipeline.cpp  GLPipeline.hpp
src/grainrad/: Image.cpp  Image.hpp  Processing.cpp  Processing.hpp
src/grainrad/effects/: AsciiEffect.cpp  AsciiEffect.hpp  DitherEffect.cpp  DitherEffect.hpp  PixelSortEffect.cpp  PixelSortEffect.hpp
src/grainrad/render/: EffectModule.hpp
tools/: ShaderLoom_cli.cpp  grainrad_cli.cpp
